--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <ul>
           <li><a href="#">Sobre</a></li>
           <li><a href="#">Produtos</a></li>
-          <li><a href="#">Porfólio</a></li>
+          <li><a href="#">Portfólio</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main class="intro">
     <h1>Cafés com a cara <br> do Brasil</h1>
     <p>Direto das fazendas de Minas Gerais</p>
   </main>
