--- a/index.html
+++ b/index.html
@@ -44,33 +44,33 @@
     </p>
   </section>
 
-  <section>
-    <div>
-      <div>
-        <h2>Paulista</h2>
+  <section class="produtos">
+    <div class="produtos-container">
+      <div class="produtos-item">
+        <h2 class="produtos-paulista">Paulista</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
            perferendis, ut reiciendis natus et, aliquid 
           eos atque ex veritatis enim deserunt dolores, possimus iure 
           necessitatibus. Deserunt numquam odit optio maxime.</p>
       </div>
 
-      <div>
-        <h2>Carioca</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-carioca">Carioca</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
            perferendis, ut reiciendis natus et, aliquid 
           eos atque ex veritatis enim deserunt dolores, possimus iure 
           necessitatibus. Deserunt numquam odit optio maxime.</p>
       </div>
 
-      <div>
-        <h2>Mineiro</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-mineiro">Mineiro</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
            perferendis, ut reiciendis natus et, aliquid 
           eos atque ex veritatis enim deserunt dolores, possimus iure 
           necessitatibus. Deserunt numquam odit optio maxime.</p>
       </div>
     </div>
-    <a href="#">Saiba Mais</a>
+    <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
   <section>
