Locais CSS-PURO

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
-    <div>
+  <section class="locais">
+    <div class="locais-item">
       <img src="img/botafogo.jpg" alt="Botafogo">
       <div>
         <h2>Botafogo</h2>
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="locais-item">
       <img src="img/iguatemi.jpg" alt="Botafogo">
       <div>
         <h2>Iguatemi</h2>
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="locais-item">
       <img src="img/mineirao.jpg" alt="Botafogo">
       <div>
         <h2>Mineirão</h2>
