Footer - CSS Puro

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     </div>
   </section>
   
-  <section>
-    <div>
-      <div>
+  <section class="assine">
+    <div class="assine-container">
+      <div class="assine-info">
         <h2>Assine nossa Newsletter</h2>
         <p>Promoções e eventos mensais</p>
       </div>
@@ -122,8 +122,8 @@
     </div>
   </section>
 
-  <footer>
-    <div>
+  <footer class="footer"> 
+    <div class="footer-container">
       <p>Este é um projeto da Origamid, mais em origamid.com <br>
         Av. Paulista, n 98</p>
         <img src="img/brafe.png" alt="">
