--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
   <title>Brafe - Puro</title>
 </head>
 <body>
-  <header>
-    <div>
-      <a href="#"><img src="img/brafe.png" alt="Brafè"></a>
+
+  <header class="menu">
+    <div class="menu-container">
+      <a class="menu-logo" 
+         href="#">
+         <img src="img/brafe.png" alt="Brafè">
+      </a>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
   </header>
+
   <main>
     <h1>Cafés com a cara<br>do Brasil</h1>
     <p>Direto das fazendas de Minas Gerais</p>
