--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <p>Direto das fazendas de Minas Gerais</p>
   </main>
   
-  <section>
-    <h1>Uma Mistura de</h1>
-    <div>
-      <div>
+  <section class="sobre">
+    <h2>Uma Mistura de</h2>
+    <div class="sobre-container">
+      <div class="sobre-item">
         <img src="img/cafe-1.jpg" alt="">
-        <h3>Amor</h3>
+        <h3>amor</h3>
       </div>
-       <div>
+      <div class="sobre-item">
         <img src="img/cafe-2.jpg" alt="">
-        <h3>Perfeição</h3>
+        <h3>perfeição</h3>
       </div>
     </div>
     <p>
