--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
     </p>
   </section>
 
-  <section>
-    <div>
-      <div>
-        <h2>Paulista</h2>
+  <section class="produtos">
+    <div class="produtos-container">
+      <div class="produtos-item">
+        <h2  class="produtos-paulista">Paulista</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quo 
         beatae velit necessitatibus numquam. Optio cupiditate aperiam hic 
         consectetur natus incidunt ullam id unde? Modi aliquid ducimus odit. 
         Cum, officiis?
         </p>
       </div>
-      <div>
-        <h2>Carioca</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-carioca">Carioca</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quo 
         beatae velit necessitatibus numquam. Optio cupiditate aperiam hic 
         consectetur natus incidunt ullam id unde? Modi aliquid ducimus odit. 
         Cum, officiis?
         </p>
       </div>
-      <div>
-        <h2>Mineiro</h2>
+      <div class="produtos-item">
+        <h2 class="produtos-carioca">Mineiro</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quo 
         beatae velit necessitatibus numquam. Optio cupiditate aperiam hic 
         consectetur natus incidunt ullam id unde? Modi aliquid ducimus odit. 
@@ -77,7 +77,7 @@
         </p>
       </div>
     </div>
-    <a href="#">Saiba Mais</a>
+    <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
   <section>
