--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
-    <div> 
+  <section class="locais">
+    <div class="locais-item"> 
       <img src="img/botafogo.jpg" alt="Unidade Botafogo">
       <div>
         <h2>Botafogo</h2>
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div> 
+    <div class="locais-item"> 
       <img src="img/iguatemi.jpg" alt="Unidade iguatemi">
       <div>
         <h2>Iguatemi</h2>
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div> 
+    <div class="locais-item"> 
       <img src="img/mineirao.jpg" alt="Unidade mineirao">
       <div>
         <h2>Botafogo</h2>
